# ariadne

./: CMakeLists.txt
cmake/: FindGnuplot.cmake  config.hpp.cmake
doc/: Doxyfile.in  logical_types.dox  macros.sty  main_page.dox  real_number_types.dox
examples/continuous/: vanderpol.cpp
examples/discrete/: henon_map.cpp
examples/hybrid/: heating.cpp
examples/pdes/: CMakeLists.txt  acoustic_1D_pde.cpp  acoustic_2D_pde.cpp  acoustic_first_order_pde.cpp  acoustic_first_order_pde_gnuplot.cpp  dirichlet.cpp
python/source/: differentiation_submodule.cpp  function_submodule.cpp  geometry_submodule.cpp  graphics_submodule.cpp  linear_algebra_submodule.cpp  numeric_submodule.cpp  utilities.hpp
source/: ariadne.hpp  config.hpp
source/algebra/: CMakeLists.txt  algebra.hpp  algebra_operations.tpl.hpp  algebra_wrapper.hpp  covector.hpp  diagonal_matrix.hpp  differential.hpp  eigenvalues.cpp  eigenvalues.hpp  expansion.cpp  expansion.hpp  expansion.inl.hpp  expansion.tpl.hpp  fixed_differential.hpp  fixed_univariate_differential.hpp  graded.hpp  matrix.cpp  matrix.hpp  matrix.tpl.hpp  multi_index.hpp  operations.hpp  symmetric_matrix.hpp  univariate_differential.hpp  vector-crtp.hpp  vector-sfinae.hpp  vector.hpp
source/dynamics/: 1D_pde.cpp  1D_pde.hpp  2D_pde.cpp  2D_pde.hpp  CMakeLists.txt  evolver_interface.hpp  map_evolver.cpp  map_evolver.hpp  vector_field_evolver.cpp  vector_field_evolver.hpp
source/function/: CMakeLists.txt  affine.hpp  chebyshev_model.cpp  chebyshev_model.hpp  chebyshev_model.tpl.hpp  chebyshev_polynomial.tpl.hpp  constraint.hpp  domain.hpp  (+25 more)
(+106 files in other folders)
